# frappe-ucm-links

./: MANIFEST.in  README.md  pyproject.toml  setup.py
ucm_custom_app/: hooks.py
ucm_custom_app/public/js/: dashboard_links.js  package.json
